Give a pack a settings screen, and declare its outputs in the order the game reads them
The screen shows what a pack declares: its pages in the columns it asks for, its toggles,
its value lists and its sliders, with the labels and tooltips from the pack's own language
files. It opens on the list of installed packs, since choosing one is what a player does
first; screen=settings in vitrail/options.txt opens it on the loaded pack instead. What it
changes is written to one file per pack under vitrail/settings/, and the watcher that was
already there picks it up, so applying a setting takes the same path as editing the file
by hand.

The translator now emits fragment outputs in ascending location order. The game reassigns
those locations from the order of the SPIR-V identifiers rather than from the layout
qualifier it was given, so a program that declared them out of order wrote into the wrong
targets and said nothing about it. Measured on the eight packs: 61 programs did, and none
does now.